<resources>
    <string name="app_name">Wow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">เกี่ยวกับแอป</string>
    <string name="item_1">รายชื่อ</string>
    <string name="item_2">เพิ่มรายชื่อ</string>
    <string name="titleAbout">จัดทำโดย</string>
    <string name="nameAbout">นายอนันต์ ไข่ทา</string>
    <string name="showTextMain">ยินดีต้อนรับ</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="showProportion">สัดส่วน</string>
    <string name="showPlace">สถานที่รับงาน</string>
    <string name="showPrice">เรทราคา</string>
    <string name="showContact">ติดต่อ</string>
    <string name="showAge">อายุ</string>
    <string name="showName">ชื่อ</string>
    <string name="hintName">ชื่อ</string>
    <string name="hintAge">อายุ</string>
    <string name="hintProportion">สัดส่วน</string>
    <string name="hintPlace">สถานที่รับงาน</string>
    <string name="hintPrice">เรทราคา</string>
    <string name="hintContact">ติดต่อ</string>
    <string name="btnAdd">เพิ่ม</string>
    <string name="wowApp">WOWAPP</string>
    <string name="nameAbouts">นาย อนันต์ ไข่ทา 59160143</string>
    <string name="aboutName">นายอนันต์ ไข่ทา 59160143</string>
    <string name="shareBtn">แชร์</string>
</resources>
