<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/detailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/contactText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showContact"
                app:layout_constraintBaseline_toBaselineOf="@+id/contactTextView"
                app:layout_constraintEnd_toStartOf="@+id/contactTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/placeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showPlace"
                app:layout_constraintBaseline_toBaselineOf="@+id/placeTextView"
                app:layout_constraintEnd_toStartOf="@+id/placeTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/priceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showPrice"
                app:layout_constraintBaseline_toBaselineOf="@+id/priceTextView"
                app:layout_constraintEnd_toStartOf="@+id/priceTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/proportionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showProportion"
                app:layout_constraintBaseline_toBaselineOf="@+id/proportionTextView"
                app:layout_constraintEnd_toStartOf="@+id/proportionTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showAge"
                app:layout_constraintBaseline_toBaselineOf="@+id/ageTextView"
                app:layout_constraintEnd_toStartOf="@+id/ageTextView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="27dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/proportionTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/proportionTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="31dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/placeTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

            <TextView
                android:id="@+id/placeTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="28dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/priceTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proportionTextView" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="28dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/contactTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeTextView" />

            <TextView
                android:id="@+id/contactTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="200dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:layout_marginStart="178dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="24dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/ageTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailImage" />

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="59dp"
                android:text="@string/showName"
                app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
                app:layout_constraintEnd_toStartOf="@+id/nameTextView"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
